# function-plotter

./: Makefile  README.md  pyproject.toml
src/plotter/: __init__.py  matplotlib.py  parser.py
tests/: test_parser.py
