[project]
name = "plotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Domenico Testa", email = "domenico.testa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.scripts]
plotter = "plotter:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
